# SolanaGameServer

./: .gitignore  .gitmodules  .style.yapf  API.md  LICENSE  Notes.md  README.md  SolanaGameServer.account.txt  SolanaGameServer.token.txt  architecture.md  card_building.md  card_gaming.md  card_gaming_implementation_notes.md  config.json  config.json.comments.md  feature_requests.md  generate_metaplex_metadata.py  getting_started.md  getting_starting.md  histfile  mint-nft.js  send-transaction.js  stake-account.json  tardigrades.md  todo_and_status.md
.history/: API_20220113144922.md  API_20220113145044.md  API_20220113145411.md  API_20220113150809.md  API_20220113150946.md  API_20220113151057.md  API_20220113151551.md  API_20220113151606.md  Notes_20220113175536.md  Notes_20220113180018.md  Notes_20220113184107.md  Notes_20220113184317.md  Notes_20220113185542.md  Notes_20220113185801.md  Notes_20220113185803.md  Notes_20220113190038.md  Notes_20220113192951.md  Notes_20220113210800.md  Notes_20220113212023.md  README_20220113151811.md  README_20220113151919.md  README_20220113152827.md  README_20220113153913.md  README_20220113153926.md  README_20220113154250.md  README_20220113154721.md  README_20220113154837.md  README_20220113155315.md  README_20220113155422.md  README_20220113155603.md  (+27 more)
third_party_pinned/hearttoken_old/: Cargo.toml
third_party_pinned/hearttoken_old/src/: entrypoint.rs  error.rs  heart_token.rs  instruction.rs  lib.rs  processor.rs  state.rs
third_party_pinned/hearttoken_old/tests/: functional_test.rs  integration.rs  scratch.rs_
(+35 files in other folders)
